# cacheable-iterators

./: README.md  pyproject.toml
cacheable_iterators/: _async.py
cached_iterators/: __init__.py  _async.py  sync.py
tests/: test_async.py  test_sync.py
