[tool.poetry]
name = "cached-iterators"
version = "1.0.2"
description = "A Python library providing cacheable iterator wrappers for both synchronous and asynchronous iterators."
authors = ["ульба <ulbwa@icloud.com>"]
readme = "README.md"
repository = "https://github.com/ulbwa/cached-iterators"

[tool.poetry.dependencies]
python = ">=3.10 <4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
